--- a/index.qmd
+++ b/index.qmd
@@ -8,4 +8,4 @@ All submissions to the Image23 conference with additional figures, references, .
 
 List of abstrac:
 
-- [Learned one-shot imaging](OneShot/abstract.qmd) Learned non-linear simultenous source and corresponding supershot for seismic imaging.
+- [Digital twin with control](DigitalTwin/abstract.qmd) An uncertainty-aware digital twin for geological carbon storage
