--- a/index.qmd
+++ b/index.qmd
@@ -4,10 +4,10 @@ title: "Image2024"
 
 This is a Quarto website.
 
-All submissions to the Image23 conference with additional figures, references, ...
+All submissions to the Image24 conference with additional figures, references, ...
 
 List of abstrac:
 
 - [Digital twin with control](DigitalTwin/abstract.qmd) An uncertainty-aware digital twin for geological carbon storage
 
-- [WISER](WISER/abstract.qmd): full-Waveform variational Inference via Subsurface Extensions with Refinements
+- [WISER](WISER/paper.qmd): full-Waveform variational Inference via Subsurface Extensions with Refinements
