Midst of making edits

--- a/GahlotLi2024SEG/paper.qmd
+++ b/GahlotLi2024SEG/paper.qmd
@@ -10,7 +10,7 @@ bibliography: paper.bib
 
 ## Introduction
 
-Digital twin refers to a dynamic virtual replica of subsurface systems, integrating real-time data and employing advanced AI methodologies such as simulation and machine learning. It can address the challenges of monitoring CO~2~ storage projects, such as subsurface complexities, heterogeneities, injection control, well placements, etc. It can provide a platform to integrate the fields of geophysics and reservoir engineering. Recent breakthroughs in generative AI enable digital twins to handle uncertainty through simulation-based inference, allowing for principled statistical analysis of field geophysical data [@gahlot2023NIPSWSifp]. In this study, we employ a recursive approach utilizing digital twin trained on simulations reflecting the current reservoir state, e.g. CO~2~ saturation, and field data such as time-lapse well and seismic data. A trained digital twin then infers the system state given a new field data. Hence, it ensures continual adaptation and accuracy improvement in subsurface monitoring throughout the CO~2~ storage projects. Also, a pivotal consideration in the digital twin is determining the optimal CO~2~ injection strategy. While higher injection rates may offer the advantages of reduced project duration and lower infrastructure costs, they also carry the risk of inducing rock fractures and potentially severe seismic activities. Hence, implementing a controlled injection rate for subsurface CO~2~ reservoirs is both advantageous and necessary.
+Digital twins refer to a dynamic virtual replicas of subsurface systems, integrating real-time data and employing advanced generative Artificial Intelligence (genAI) methodologies such as neural posterior density estimation via simulation-based inference, and sequential Bayesian inference. Thanks to a combination of these advanced Bayesian inference techniques, our approach is capable of addressing challenges of monitoring CO~2~ storage projects. These challenges includes complexity and heterogeneity of the subsurface (seismic and fluid-flow properties), operation optimization via injection control, use of multimodal data, and (monitoring) well placement, etc. As such, the Digital Twin provides a platform to integrate the fields of geophysics and reservoir engineering. In addition, tecent breakthroughs in genAI enable digital twins to handle uncertainty through simulation-based inference that allows for  principled uncertainty quantification [@gahlot2023NIPSWSifp]. In this study, we employ a recursive approach utilizing digital twin trained on simulations reflecting the current reservoir state, e.g. CO~2~ saturation, and field data such as time-lapse well and seismic data. A trained digital twin then infers the system state given a new field data. Hence, it ensures continual adaptation and accuracy improvement in subsurface monitoring throughout the CO~2~ storage projects. Also, a pivotal consideration in the digital twin is determining the optimal CO~2~ injection strategy. While higher injection rates may offer the advantages of reduced project duration and lower infrastructure costs, they also carry the risk of inducing rock fractures and potentially severe seismic activities. Hence, implementing a controlled injection rate for subsurface CO~2~ reservoirs is both advantageous and necessary.
 
 ## Methodology
 
