--- a/index.qmd
+++ b/index.qmd
@@ -9,3 +9,4 @@ All submissions to the Image23 conference with additional figures, references, .
 List of abstrac:
 
 - [Digital twin with control](DigitalTwin/abstract.qmd) An uncertainty-aware digital twin for geological carbon storage
+- [Optimal design with FNOs](OptimalDesign/paper.qmd) A optimization framework to obtain CIGs with desirable properties
