--- a/Rex2024SEG/paper.bib
+++ b/Rex2024SEG/paper.bib
@@ -61,3 +61,10 @@ keywords = {symbolic processing, stencil, structured grid, compiler, Finite-diff
   bdsk-url-1	= {http://library.seg.org/doi/abs/10.1190/1.3238367},
   bdsk-url-2	= {http://dx.doi.org/10.1190/1.3238367}
 }
+
+@misc{fno,
+Author = {Zongyi Li and Nikola Kovachki and Kamyar Azizzadenesheli and Burigede Liu and Kaushik Bhattacharya and Andrew Stuart and Anima Anandkumar},
+Title = {Fourier Neural Operator for Parametric Partial Differential Equations},
+Year = {2020},
+Eprint = {arXiv:2010.08895},
+}
