--- a/index.qmd
+++ b/index.qmd
@@ -11,3 +11,5 @@ List of abstrac:
 - [Digital twin with control](DigitalTwin/abstract.qmd) An uncertainty-aware digital twin for geological carbon storage
 
 - [WISER](yin2024SEG/paper.qmd): full-Waveform variational Inference via Subsurface Extensions with Refinements
+
+- [VelGen](erdinc2024SEG/abstract.qmd): Building subsurface velocity priors from field observations
