--- a/GahlotLi2024SEG/paper.bib
+++ b/GahlotLi2024SEG/paper.bib
@@ -11,3 +11,25 @@
 	presentation = {https://slim.gatech.edu/Publications/Public/Conferences/NIPS/2023/gahlot2023NIPSWSifp/poster.pdf},
 	author = {Abhinav Prakash Gahlot and Huseyin Tuna Erdinc and Rafael Orozco and Ziyi Yin and Felix J. Herrmann}
 }
+
+@article{herrmann2023president,
+  title={President's Page: Digital twins in the era of generative AI},
+  author={Herrmann, Felix J},
+  journal={The Leading Edge},
+  volume={42},
+  number={11},
+  pages={730--732},
+  year={2023},
+  publisher={Society of Exploration Geophysicists}
+}
+
+@article{thelen2022comprehensivea,
+  title={A comprehensive review of digital twin—part 1: modeling and twinning enabling technologies},
+  author={Thelen, Adam and Zhang, Xiaoge and Fink, Olga and Lu, Yan and Ghosh, Sayan and Youn, Byeng D and Todd, Michael D and Mahadevan, Sankaran and Hu, Chao and Hu, Zhen},
+  journal={Structural and Multidisciplinary Optimization},
+  volume={65},
+  number={12},
+  pages={354},
+  year={2022},
+  publisher={Springer}
+}
