--- a/Yunlin_Zeng2024SEG/paper.qmd
+++ b/Yunlin_Zeng2024SEG/paper.qmd
@@ -13,9 +13,9 @@ bibliography: paper.bib
 
 **Method** By interpreting the initial migration-velocity model as a stochastic latent variable, we propose to augment the training pairs, $\{(\mathbf{x}^{(m)}, \mathbf{\bar{y}}^{(m)})\}_{m=1}^M$, where the $\mathbf{\bar{y}}^{(m)}$ with the $\mathbf{\bar{y}}^{(m)}$'s computed with one single initial migration-velocity model, $\mathbf{x}_0$, with $\mathbf{\bar{y}}^{(m)}$ obtained with different (perturbed) initial migration-velocity model, $\mathbf{x}_0$. The aim of this training dataset augmentation is to improve the robustness of WISE---i.e., make its neural posterior estimation less dependent on the choice for the initial migration-velocity model, $\mathbf{x}_0$. 
 
-**Results** To improve the neural posterior estimation's robustness, multiple initial migration-velocity models, $\mathbf{x}_0$, are obtained by perturbing the ground-truth velocity model, $\mathbf{x}$, followed by extensive smoothing. Since this deformation is stochastic we can generate an infinite number of background models to use during training, although in practice we regenerate the background model a few times (3-5). Figure \ref{fig:workflow}(a)-(c) shows the complete framework.
+**Results** To improve the neural posterior estimation's robustness, multiple initial migration-velocity models, $\mathbf{x}_0$, are obtained by perturbing the ground-truth velocity model, $\mathbf{x}$, followed by extensive smoothing. Since this deformation is stochastic we can generate an infinite number of background models to use during training, although in practice we regenerate the background model a few times (3-5). Figure 1(a)-(c) shows the complete framework.
 
-To evaluate our method, we divide the compass model dataset [@Jones2012] by allocating $800$ pairs for training and $150$ for testing. We train the baseline CNF on $M=800$ velocity-extended image pairs, and train enhanced CNFs on augmented training pairs ($M=1600, 2400, ...$ etc.). The trained CNFs are evaluated by structural similarity index measure (SSIM) and root mean square error (RMSE) of the posterior samples' mean against the ground truth. The results in Figure \ref{fig:workflow}(d) show that posterior samples progressively align more closely with the ground truth. We also observe the trend that the uncertainty is reduced as we increase the number of background model regenerations used during training. This implies that the uncertainty information in the baseline has not properly captured the uncertainty due to the background model while our method has learned to incorporate this uncertainty information into the final inference result.
+To evaluate our method, we divide the compass model dataset [@Jones2012] by allocating $800$ pairs for training and $150$ for testing. We train the baseline CNF on $M=800$ velocity-extended image pairs, and train enhanced CNFs on augmented training pairs ($M=1600, 2400, ...$ etc.). The trained CNFs are evaluated by structural similarity index measure (SSIM) and root mean square error (RMSE) of the posterior samples' mean against the ground truth. The results in Figure 1(d) show that posterior samples progressively align more closely with the ground truth. We also observe the trend that the uncertainty is reduced as we increase the number of background model regenerations used during training. This implies that the uncertainty information in the baseline has not properly captured the uncertainty due to the background model while our method has learned to incorporate this uncertainty information into the final inference result.
 
 ::: {#fig-framwork}
 ![](./figs/framework.png){width="90%"}
