add figure discription in text

--- a/Yunlin_Zeng2024SEG/paper.qmd
+++ b/Yunlin_Zeng2024SEG/paper.qmd
@@ -19,9 +19,9 @@ By interpreting the initial migration-velocity model as stochastic latent variab
 
 ## Result
 
-To improve the neural posterior estimation's robustness, multiple initial migration-velocity models, $\mathbf{x}_0$, are obtained by perturbing the ground-truth velocity model, $\mathbf{x}$, followed by extensive smoothing. Since this deformation is stochastic, we can generate an "infinite" number of background models to use during training, although in practice we regenerate the background model a few times (3-5). Figure 1 shows the complete framework.
+To improve the neural posterior estimation's robustness, multiple initial migration-velocity models, $\mathbf{x}_0$, are obtained by perturbing the ground-truth velocity model, $\mathbf{x}$, followed by extensive smoothing. Since this deformation is stochastic, we can generate an "infinite" number of background models to use during training, although in practice we regenerate the background model a few times (3-5) (Figure 1(a)). Then, new $\mathbf{\bar{y}}^{(i)}$ are generated based on each $\mathbf{x}_0^{(i)}$ and $\mathbf{y}$ (Figure 1(b)), and the resulting $\{\mathbf{x}, \mathbf{\bar{y}}^{i}\}$ pairs form training dataset for the Conditional Normalizing Flow (CNF) (Figure 1(c)). 
 
-To evaluate our method, we divide the Compass model dataset [@Jones2012] by allocating $800$ pairs for training and $150$ for testing. We train the baseline Conditional Normalizing Flow (CNF) on $M=800$ velocity-extended image pairs, and train enhanced CNFs on augmented training pairs ($M=1600, 2400, ...$ etc.). The trained CNFs are evaluated by structural similarity index measure (SSIM) and root mean square error (RMSE) of the posterior samples' mean against the ground truth. The results in Figure 2 show that posterior samples progressively align more closely with the ground truth. We also observe the trend that the uncertainty is reduced as we increase the number of background model regenerations used during training. This implies that the uncertainty information in the baseline has not properly captured the uncertainty due to the background model while our method has learned to incorporate this uncertainty information into the final inference result.
+To evaluate our method, we divide the Compass model dataset [@Jones2012] by allocating $800$ pairs for training and $150$ for testing. We train the baseline CNF on $M=800$ velocity-extended image pairs, and train enhanced CNFs on augmented training pairs ($M=1600, 2400, ...$ etc.). The trained CNFs are evaluated by structural similarity index measure (SSIM) and root mean square error (RMSE) of the posterior samples' mean against the ground truth. Figure 2 shows the conditional mean and RMSE of the baseline and the enhanced CNF posterior samples, where the enhanced CNF sampler aligns more closely with the ground truth. We also observe the trend that the uncertainty is reduced as we increase the number of background model regenerations used during training. This implies that the uncertainty information in the baseline has not properly captured the uncertainty due to the background model while our method has learned to incorporate this uncertainty information into the final inference result.
 
 ::: {#fig-framwork}
 ![](./figs/framework.png){width="90%"}
