--- a/Rex2024SEG/paper.qmd
+++ b/Rex2024SEG/paper.qmd
@@ -18,6 +18,14 @@ $$
 
 Common Image Gathers (CIGs) play an indispensable role in seismic imaging as they provide a depth-resolved representation of subsurface reflections, essential for interpreting geological structures. They validate reflection consistency across different incidence angles, aiding in analyzing rock layer reflectivity and anisotropy—--crucial elements for mapping subsurface formations. Additionally, CIGs are pivotal in seismic velocity analysis, enabling the refinement of velocity models to align with observed seismic data. {==This iterative optimization, guided by the principle of energy focusing at various offsets in CIGs, allows geophysicists to assess and enhance the accuracy of subsurface imaging.==}{>>Bit vague<<} However, the process is often hindered by the computational burden of traditional migration methods, especially when dealing with complex background models. To bypass these limitations, we introduce a surrogate learning approach that utilizes Fourier Neural Operators (FNOs) to learn a mapping between velocity models and CIGs. This methodology leverages the capacity of FNOs to approximate PDE solutions efficiently, thereby expediting the imaging process [@fno]. By training an FNO specifically for a given survey, we transform the velocity continuation process into a near-instantaneous task, allowing for the quick generation of CIGs without the exhaustive computational demand of traditional methods.
 
+$L =-\sum_i\frac{E_i}{i}$
+
+$E_i = \frac{fft(CIG[-i:i])}{fft(CIG)}$
+
+Where $E_i$ represents the $\%$ of energy contained in offsets that are at most $|i|$ offsets away from the 0 offset. 
+
+NOTE: The fft is taken along the offset dimension
+
 ## Methodology
 
 Initially, we prepare our dataset starting with a base velocity model $x_0$ and its associated Common Image Gather. By smoothing $x_0$, we augment our dataset to multiple smooth models (Figure 1.b). Next, we simulate correcponding CIGs that serve as our training targets (Figure 1.c). Next, we use an FNO as a surrogate machine learning model, which will be trained to map pairs of $1)$ true velocity model, $2)$ CIG of true velocity model and $3)$ a smoothed velocity model to the CIG of the smooth model (Figure 1.d). Through this process, we not only enhance the accuracy of CIG prediction but also significantly speed up computations, enabling real-time generation of CIGs and analysis of seismic data.
