--- a/KarthaSEG2024/paper.qmd
+++ b/KarthaSEG2024/paper.qmd
@@ -29,7 +29,7 @@ $$
 
 ## Motivation
 
-The primary objective is to develop a mapping from acoustic shot records without density information to those with density information but this is a computationally expensive process. There is a pressing need for a computationally efficient approach to generate shot records with density information from those lacking it, in order to achieve stronger reflections and a clearer image of the subsurface. We approached this problem using the method of GenAI. Recently, GenAI has made quite an impact in accurate image generation, and using these techniques provides a computationally effective method to generate images. This method promises to offer an accurate and cost-effective way to produce acoustic shot records with density information from shot records without density information; the former are typically expensive to create. Using GenAI, the sampling time is almost 10 times less than when using computational software to produce shot records.
+The primary objective is to develop a mapping from acoustic shot records without density information to those with density information but this is a computationally expensive process. One method is to generate shot records with density information from those lacking it, in order to achieve stronger reflections and a clearer image of the subsurface. We approached this problem using the method of GenAI. Recently, GenAI has made quite an impact in accurate image generation, and using these techniques provides a computationally effective method to generate images. This method promises to offer an accurate and cost-effective way to produce acoustic shot records with density information from shot records without density information; the former are typically expensive to create. Using GenAI, the sampling time is almost 10 times less than when using computational software to produce shot records.
 
 ## Method
 
